@@ -77,12 +77,12 @@ class TestProc < Test::Unit::TestCase
     assert_equal(2, proc{|(x, y), z|[x,y]}.arity)
     assert_equal(1, proc{|(x, y), z=0|[x,y]}.arity)
     assert_equal(-4, proc{|x, *y, z, a|}.arity)
-    assert_equal(-1, proc{|**|}.arity)
-    assert_equal(-1, proc{|**o|}.arity)
-    assert_equal(-2, proc{|x, **o|}.arity)
-    assert_equal(-1, proc{|x=0, **o|}.arity)
-    assert_equal(-2, proc{|x, y=0, **o|}.arity)
-    assert_equal(-3, proc{|x, y=0, z, **o|}.arity)
+    assert_equal(0, proc{|**|}.arity)
+    assert_equal(0, proc{|**o|}.arity)
+    assert_equal(1, proc{|x, **o|}.arity)
+    assert_equal(0, proc{|x=0, **o|}.arity)
+    assert_equal(1, proc{|x, y=0, **o|}.arity)
+    assert_equal(2, proc{|x, y=0, z, **o|}.arity)
     assert_equal(-3, proc{|x, y=0, *z, w, **o|}.arity)
 
     assert_equal(2, proc{|x, y=0, z, a:1|}.arity)
